--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "@ngrx/effects": "^7.1.0",
+    "@ngrx/router-store": "^7.1.0",
     "@ngrx/store": "^7.1.0",
+    "@ngrx/store-devtools": "^7.1.0",
     "angular-in-memory-web-api": "^0.8.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
